--- a/Weather app/index.html
+++ b/Weather app/index.html
@@ -12,6 +12,9 @@
             <input type="text" placeholder="Enter city name" spellcheck="false">
             <button><img src="images/search.png"></button>
         </div>
+        <div class="error">
+            <p>City not found</p>
+        </div>
         <div class="weather">
             <img src ="images/rain.png" class="weather-icon">
             <h1 class="temp">25°C</h1>
@@ -35,5 +38,62 @@
 
         </div>
     </div>
+
+<script>
+    const apiKey = "244f2123d2e53373037aa20f4e03c9c2";
+    const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric";
+    const searchBox = document.querySelector(".search input");
+    const searchBtn = document.querySelector(".search button");
+    const weatherDiv = document.querySelector(".weather");
+    const errorDiv = document.querySelector(".error");
+
+    async function checkWeather(city){
+        if (!city) {
+            return;
+        }
+        
+        const response = await fetch(apiUrl + "&appid=" + apiKey + "&q=" + city);
+        var data = await response.json();
+        console.log(data);
+
+        if (data.cod === "404") {
+            errorDiv.style.display = "block";
+            weatherDiv.style.display = "none";
+            return;
+        }
+
+        errorDiv.style.display = "none";
+        weatherDiv.style.display = "block";
+
+        document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°C";
+        document.querySelector(".city").innerHTML = data.name;
+        document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+        document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
+
+        if(data.weather[0].main == "Clouds"){
+            document.querySelector(".weather-icon").src = "images/clouds.png";
+        }
+        else if(data.weather[0].main == "Clear"){
+            document.querySelector(".weather-icon").src = "images/clear.png";
+        }
+        else if(data.weather[0].main == "Rain"){
+            document.querySelector(".weather-icon").src = "images/rain.png";
+        }
+        else if(data.weather[0].main == "Drizzle"){
+            document.querySelector(".weather-icon").src = "images/drizzle.png";
+        }
+        else if(data.weather[0].main == "Mist"){
+            document.querySelector(".weather-icon").src = "images/mist.png";
+        }
+    }
+    searchBtn.addEventListener("click", () => {
+        checkWeather(searchBox.value);
+    });
+    searchBox.addEventListener("keypress", (e) => {
+        if (e.key === "Enter") {
+            checkWeather(searchBox.value);
+        }
+    });
+</script>
 </body>
 </html> 
