--- a/Tic Tac Toe Game/index.html
+++ b/Tic Tac Toe Game/index.html
@@ -8,6 +8,14 @@
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="select-box"></div>
+    <div class="select-box">
+        <header>Tic Tac Toe</header>
+        <div class="content">
+            <div class="title">Select which player you want to be?</div>
+            <div class="options">
+                
+            </div>
+        </div>
+    </div>
 </body>
 </html>
