--- a/Tic Tac Toe Game/index.html
+++ b/Tic Tac Toe Game/index.html
@@ -4,18 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe Game</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="select-box">
         <header>Tic Tac Toe</header>
         <div class="content">
-            <div class="title">Select which player you want to be?</div>
+            <div class="title">Select which you want to be?</div>
             <div class="options">
-                
+                <button class="playerX">Player X</button>
+                <button class="playerO">Player O</button>
             </div>
         </div>
     </div>
+
+    <!-- playboard selection -->
+     <div class="play-board">
+        <div class="details">
+            <div class="players">
+                <span class="Xturn">X' Turn</span>
+                <span class="Oturn">O' Turn</span>
+            </div>
+        </div>
+        <section>
+            <span class="box1"></span>
+            <span class="box2"></span>
+            <span class="box3"></span>
+        </section>
+        <section>
+            <span class="box4"></span>
+            <span class="box5"></span>
+            <span class="box6"></span>
+        </section>
+        <section>
+            <span class="box7"></span>
+            <span class="box8"></span>
+            <span class="box9"></span>
+        </section>
+     </div>
 </body>
 </html>
